# meningioma_dl

./: .gitignore  README.md  entrypoint.sh  image.def  lddpython  pip_freeze_of_woking_fl.txt  pyproject.toml  setup.py
envs/: ci_run.env  ci_run_cluster.env  local_ci_run_cluster_data.env  local_run_cluster_data.env  slurm.env
meningioma_dl/: config.py  evaluate.py  evaluate_ensemble.py  hyperparameters_configs.py  model.py  requirements.txt  requirements_pytorch39.txt  run_centralized_training.py  run_federated_training.py  run_optuna_study.py  train.py  training_utils.py  utils.py
meningioma_dl/data_loading/: augmentation.py  data_loader.py  labels_loading.py
meningioma_dl/experiments_configs/: data_types.py  experiments.py  hyperparameters_configs.py  hyperparameters_configs_v2.py
meningioma_dl/experiments_specs/: augmentation_specs.py  experiments.py  fl_strategy_specs.py  model_specs.py  modelling_specs.py  preprocessing_specs.py  scheduler_specs.py  training_specs.py  traning_specs.py
meningioma_dl/federated_learning/: clients.py  create_federated_data_splits.py  ensemble_fl.py  federated_training_utils.py  server.py  strategy.py
meningioma_dl/jobs/: experiments_setup.py  run_centralized_training.py  run_evaluate_ensemble.py  run_evaluate_single_model.py  run_federated_training.py
meningioma_dl/localized_federated_ensemble/: data_loading.py  evaluation.py  server.py  weights_calculation.py
meningioma_dl/model_evaluation/: centralized_evaluation.py  metrics.py
meningioma_dl/model_training/: loss.py  predictions.py  training_loop.py
meningioma_dl/models/: resnet.py
meningioma_dl/visualizations/: images_visualization.py  results_visualizations.py
notebooks/: gradcam.ipynb  graphs_creation.ipynb  visualize_augmentations.ipynb
scripts/: create_dataset_split.py  run_training.py
slurm_scripts/: centralized_training.sh  lddpython_  run_evaluation.sh  run_evaluation_slurm.sh  run_grid_search.sh  run_training.sh
src/meningioma_dl/data_loading/: experiments_setup.py  labels_loading.py
tests/: test_evaluation.py  test_fl_samples_splitting.py
(+19 files in other folders)
