[project]
name = "meningioma_dl"
version = "1.0.0"
requires-python = ">=3.10"
description = "The library implements centralized and federated training of Deep Learning models for meningioma WHO grading classification."
authors = [
  {name = "Lukasz Sobocinski", email = "lukasz.p.sobocinski@gmail.com"},
]
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/meningioma_dl/requirements.txt"]}
optional-dependencies = {dev = { file = ["src/meningioma_dl/requirements_dev.txt"] }}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
